fix horizontal scroll in replies

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:regular,500,700);
+@import url("https://fonts.googleapis.com/css?family=Rubik:regular,500,700");
 
 @import "./_mixins";
 
@@ -32,6 +32,7 @@ body {
       gap: 20px;
    }
    &__item {
+      flex: 1 1 auto;
       &:last-child {
          margin-bottom: 0;
       }
@@ -43,15 +44,14 @@ body {
       border-radius: 10px;
       padding: 25px;
       display: grid;
-      grid-template-columns: auto auto repeat(2, 1fr);
-      grid-template-rows: 40px auto;
-      column-gap: 25px;
+      grid-template-columns: repeat(3, auto);
       gap: 15px;
       @include adaptive-value("font-size", 18, 14, 0);
       @media (max-width: 630px) {
          grid-template-columns: repeat(2, 1fr);
          grid-template-rows: 40px 1fr 40px;
          gap: 10px;
+         padding: 16px;
       }
    }
    &__author {
@@ -61,6 +61,9 @@ body {
       img {
          width: 40px;
          height: 40px;
+      }
+      @media (max-width: 630px) {
+         grid-column: span 2;
       }
    }
    &__author-name {
@@ -73,18 +76,19 @@ body {
          padding: 0 5px 2px;
          border-radius: 3px;
          margin-left: 8px;
+         @media (max-width: 630px) {
+            font-size: 13px;
+         }
       }
    }
    &__period {
       display: flex;
       align-items: center;
       color: hsl(211, 10%, 45%);
-      @media (max-width: 630px) {
-         justify-self: end;
-      }
+      margin-left: 16px;
    }
    &__body {
-      grid-column: span 3;
+      grid-column: span 2;
       line-height: 1.5rem;
    }
 
@@ -157,28 +161,23 @@ body {
    &__template {
       margin-top: 20px;
       display: grid;
-      grid-template-columns: 88px auto;
+      grid-template-columns: 88px 1fr;
       row-gap: 20px;
       @media (max-width: 630px) {
-         grid-template-columns: 20px auto;
+         grid-template-columns: 16px 1fr;
       }
    }
    &__aside {
-      // grid-row: span auto;
       position: relative;
-      &::after {
-         content: "";
-         position: absolute;
-         background-color: hsl(223, 19%, 93%);
-         top: 0;
-         left: 50%;
-         transform: translate(-50%, 0);
-         width: 2px;
-         height: 100%;
-         @media (max-width: 630px) {
-            left: 0;
-            transform: translate(0, 0);
-         }
+      background-color: hsl(223, 19%, 93%);
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, 0);
+      width: 2px;
+      height: 100%;
+      @media (max-width: 630px) {
+         left: 0;
+         transform: translate(0, 0);
       }
    }
    &__items {
@@ -198,7 +197,7 @@ body {
       display: grid;
       grid-template-columns: 50px auto 100px;
       gap: 20px;
-      @media (max-width:630px){
+      @media (max-width: 630px) {
          grid-template-columns: repeat(2, 1fr);
       }
    }
@@ -209,7 +208,6 @@ body {
       }
    }
    &__text {
-      
       textarea {
          display: block;
          width: 100%;
@@ -220,7 +218,7 @@ body {
          font-size: 16px;
          border: 1px solid hsl(223, 19%, 93%);
       }
-      @media (max-width:630px){
+      @media (max-width: 630px) {
          grid-column: 1 / 3;
          grid-row: 1 / 2;
       }
@@ -240,7 +238,7 @@ body {
          font-weight: 700;
          font-size: 17px;
       }
-      @media (max-width:630px){
+      @media (max-width: 630px) {
          flex-direction: row-reverse;
       }
    }
